# deepseek-code

./: .gitignore  DEEPSEEK.md  README.md  pyproject.toml  settings.json
deepseek_code/: __init__.py  agent.py  api.py  checkpoint.py  compaction.py  config.py  display.py  git_utils.py  main.py  memory_hook.py  permissions.py  session.py  skills.py  sub_agent.py  system_prompt.py  types.py
deepseek_code/tools/: __init__.py  agent_tool.py  base.py  file_edit.py  file_read.py  file_write.py  glob_search.py  grep_search.py  memory_save.py  registry.py  shell.py  todo_write.py  web_fetch.py  web_search.py
extensions/vscode/: package-lock.json  package.json
extensions/vscode/src/: extension.ts
memory/: coding.md  comparison.md  git_conventions.md
skills/brainstorming/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
tests/: test_system.py
