[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-code"
version = "0.1.0"
description = "CLI coding agent powered by DeepSeek models — agentic loop, 10 tools, session persistence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
deepseek = "deepseek_code.main:main"

[tool.setuptools.packages.find]
where = ["."]
